Fix work layouts + buttons alignment

--- a/src/components/WorkDisplays/Work-modules.module.sass
+++ b/src/components/WorkDisplays/Work-modules.module.sass
@@ -92,11 +92,7 @@
     justify-content: flex-start
     align-items: center 
     grid-column: 4 / -1
-    // transform: translateY(40px)
-    // opacity: 0
-    // transition: 1.3s ease-out
     li 
-        height: 50px
         margin-right: 1em
     &.inView 
         transform: translateX(0)
